--- a/app/src/main/res/layout/activity_intenciones.xml
+++ b/app/src/main/res/layout/activity_intenciones.xml
@@ -31,4 +31,10 @@
         android:layout_height="wrap_content"
         android:onClick="email"
         android:text="Enviar un correo al Ing. del curso" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="whatsapp"
+        android:text="Enviar un mjs de wpp al Ing. del curso"
+        />
 </LinearLayout>
