añadiendo intencion para navegacion

--- a/app/src/main/res/layout/activity_intenciones.xml
+++ b/app/src/main/res/layout/activity_intenciones.xml
@@ -37,4 +37,10 @@
         android:onClick="whatsapp"
         android:text="Enviar un mjs de wpp al Ing. del curso"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="navegacion"
+        android:text="Iniciar Navegacion"
+        />
 </LinearLayout>
