--- a/app/src/main/res/layout/activity_multimedia2.xml
+++ b/app/src/main/res/layout/activity_multimedia2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Multimedia2">
+    tools:context=".Multimedia.Multimedia2">
     <VideoView
         android:id="@+id/videoView1"
         android:layout_width="0dp"
